--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             // Clear input fields
             document.getElementById('dailySalary').value = '';
             document.getElementById('workingDays').value = '';
-            document.getElementById('kharchi').value = '0';
+            document.getElementById('kharchi').value = '';
             
             // Hide result container
             const resultContainer = document.getElementById('resultContainer');
